k8s/03-erthiscan-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erthiscan-core
  namespace: erthiscan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erthiscan-core
  template:
    metadata:
      labels:
        app: erthiscan-core
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: erthiscan-core
          image: ghcr.io/grigoriitropin/erthiscan-core:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8000
