k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erthiscan-core
  namespace: erthiscan
spec:
  replicas: 3
  selector:
    matchLabels:
      app: erthiscan-core
  template:
    metadata:
      labels:
        app: erthiscan-core
    spec:
      containers:
        - name: erthiscan-core
          image: ghcr.io/grigoriitropin/erthiscan-core:latest
          ports:
            - containerPort: 8000
