k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erthiscan-core
  namespace: erthiscan
spec:
  selector:
    app: erthiscan-core
  ports:
    - port: 80
      targetPort: 8000
